# guia-ml-dl-flet

./: README.md  pyproject.toml
.github/workflows/: build-android-apk.yml
src/: main.py
