[project]
name = "guia_ml_dl_flet"
version = "1.0.0"
description = "Aplicativo educacional offline sobre Machine Learning e Deep Learning feito com Flet."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flet==0.28.3"
]

[tool.flet]
product = "Guia Pratico ML DL"
company = "Bruno Silva"
copyright = "Copyright (C) 2026 Bruno Silva"
org = "com.blopess"

[tool.flet.app]
path = "src"
module = "main"
